# funcnodes_keras

./: .gitignore  pyproject.toml
.github/workflows/: py_test.yml  version_publish_main.yml
funcnodes_keras/: __init__.py  applications.py  fit.py  layers.py  metrics.py  optimizers.py  utilities.py
tests/: all_nodes_test_base.py  test_all_nodes.py  test_applications.py  test_datasets.py  test_fit.py  test_losses.py  test_metrics.py  test_optimizers.py  test_utilities.py
