[tool.poetry]
name = "funcnodes-keras"
version = "0.1.10"
description = ""
authors = ["Kourosh Rezaei <kouroshrezaei90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

funcnodes = "*"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.16.1"
tensorflow-intel = "2.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pre-commit = "*"
funcnodes-module = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."funcnodes.module"]
module = "funcnodes_keras"
shelf = "funcnodes_keras:NODE_SHELF"
